@@ -1,5 +1,10 @@
 2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* _mingw.h (__CRT__NO_INLINE): New private macro. Always defined when
+	__NO_INLINE__ is defined.
+
+2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>
+
 	* io.h: Removed dead _WIN64 macros where _USE_32BIT_TIME_T is defined
 	(the two just cannot live together.)
 	* sys/stat.h: Likewise.
